# AnalysisFW

./: .gitattributes  CMakeLists.txt  README.md
RunAnalysis/: DatasetsPaths.py  InputExample.txt  RunAnalysis.py  dataSets.py  infofile.py
RunAnalysis/utils/: MetadataGen.py
app/: AnalysisFW.cpp  AnalysisWrapper.h  CMakeLists.txt
data/: DownloadExampleData.sh
data/MVA-Weights/: 10Folds_BDT-0.3.class.C  10Folds_BDT-0.3.weights.xml  10Folds_BDT-0.3_fold1.class.C  10Folds_BDT-0.3_fold1.weights.xml  10Folds_BDT-0.3_fold10.class.C  10Folds_BDT-0.3_fold10.weights.xml  10Folds_BDT-0.3_fold2.class.C  10Folds_BDT-0.3_fold2.weights.xml  10Folds_BDT-0.3_fold3.class.C  10Folds_BDT-0.3_fold3.weights.xml  10Folds_BDT-0.3_fold4.class.C  10Folds_BDT-0.3_fold4.weights.xml  10Folds_BDT-0.3_fold5.class.C  10Folds_BDT-0.3_fold5.weights.xml  10Folds_BDT-0.3_fold6.class.C  10Folds_BDT-0.3_fold6.weights.xml  10Folds_BDT-0.3_fold7.class.C  10Folds_BDT-0.3_fold7.weights.xml  10Folds_BDT-0.3_fold8.class.C  10Folds_BDT-0.3_fold8.weights.xml  10Folds_BDT-0.3_fold9.class.C  10Folds_BDT-0.3_fold9.weights.xml
data/user.dbaronmo.v26.data18_13TeV.periodI.physics_Main.M4.grp23_v01_p4238.sv1_Le/: user.dbaronmo.25819190._000001.LepUniv_ttbar.root  user.dbaronmo.25819190._000002.LepUniv_ttbar.root  user.dbaronmo.25819190._000003.LepUniv_ttbar.root  user.dbaronmo.25819190._000004.LepUniv_ttbar.root  user.dbaronmo.25819190._000005.LepUniv_ttbar.root  user.dbaronmo.25819190._000006.LepUniv_ttbar.root
data/user.dbaronmo.v26.mc.361102.PoPy8_Wplustaunu.M4.e3601_s3126_r10724_p4512.sv1_Le/: user.dbaronmo.25819141._000002.LepUniv_ttbar.root  user.dbaronmo.25819141._000003.LepUniv_ttbar.root
data/user.dbaronmo.v26.mc.361105.PoPy8_Wminustaunu.M4.e3601_s3126_r10724_p4512.sv1_Le/: user.dbaronmo.25819146._000001.LepUniv_ttbar.root  user.dbaronmo.25819146._000002.LepUniv_ttbar.root
data/user.dbaronmo.v26.mc.361108.PoPy8_Ztt.M4.e3601_s3126_r9364_p4512.sv1_Le/: user.dbaronmo.25819000._000001.LepUniv_ttbar.root  user.dbaronmo.25819000._000002.LepUniv_ttbar.root  user.dbaronmo.25819000._000004.LepUniv_ttbar.root
include/: CLoop.h  CLoopConfig.h  DeclareHistograms.h  DeclareTreeBranches.h  HistogramContainer.h  OutputTags.h  OutputTree.h  ReweightingTools.h  VBFBDT.h
python/: AnalysisFW.cpp  AnalysisWrapper.h  CMakeLists.txt
src/: Analysis.cpp  CLoop.cpp  CLoopBackend.cpp  CMakeLists.txt  HistogramContainer.cpp  OutputTree.cpp  Tools.cpp
